--- a/clientui/src/main/resources/templates/FicheProduit.html
+++ b/clientui/src/main/resources/templates/FicheProduit.html
@@ -16,17 +16,12 @@
 
     <div class="row">
         <div class="col-md-4 mx-auto mt-5 text-center">
-
             <img th:src="${produit.image}" class="card-img-top"/>
-
             <p th:text="${produit.titre}" class="font-weight-bold"></p>
-
             <p th:text="${produit.description}"></p>
-
             <p>
-                <a th:href="@{|/commander-produit/${produit.id}/${produit.prix}||}" class="font-weight-bold">COMMANDER</a>
+	            <a th:href="@{|/commander-produit/${produit.id}/${produit.prix}|}" class="font-weight-bold">COMMANDER</a>
             </p>
-
         </div>
     </div>
 
