--- a/clientui/src/main/resources/templates/error.html
+++ b/clientui/src/main/resources/templates/error.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	<link rel="stylesheet" href="../static/css/errorStyle.css" th:href="@{/css/errorStyle.css}"/>
-</head>
-<body>
-<h1>Error Page</h1>
-<table>
-	<tr>
-		<td>Date</td>
-		<td th:text="${timestamp}"/>
-	</tr>
-	<tr>
-		<td>Path</td>
-		<td th:text="${path}"/>
-	</tr>
-	<tr>
-		<td>Error</td>
-		<td th:text="${error}"/>
-	</tr>
-	<tr>
-		<td>Status</td>
-		<td th:text="${status}"/>
-	</tr>
-	<tr>
-		<td>Message</td>
-		<td th:text="${message}"/>
-	</tr>
-	<tr>
-		<td>Exception</td>
-		<td th:text="${exception}"/>
-	</tr>
-	<tr>
-		<td class="trace">Trace</td>
-		<td class="trace">
-			<pre th:text="${trace}"/>
-		</td>
-	</tr>
-</table>
-</body>
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<link rel="stylesheet" href="../static/css/errorStyle.css" th:href="@{/css/errorStyle.css}"/>
+	</head>
+	<body>
+		<h1>Error Page</h1>
+		<table>
+			<tr>
+				<td>Date</td>
+				<td th:text="${timestamp}"/>
+			</tr>
+			<tr>
+				<td>Path</td>
+				<td th:text="${path}"/>
+			</tr>
+			<tr>
+				<td>Error</td>
+				<td th:text="${error}"/>
+			</tr>
+			<tr>
+				<td>Status</td>
+				<td th:text="${status}"/>
+			</tr>
+			<tr>
+				<td>Message</td>
+				<td th:text="${message}"/>
+			</tr>
+			<tr>
+				<td>Exception</td>
+				<td th:text="${exception}"/>
+			</tr>
+			<tr>
+				<td class="trace">Trace</td>
+				<td class="trace">
+					<pre th:text="${trace}"/>
+				</td>
+			</tr>
+		</table>
+	</body>
 </html>
