--- a/clientui/src/main/resources/templates/Paiement.html
+++ b/clientui/src/main/resources/templates/Paiement.html
@@ -1,37 +1,34 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<title>Mcommerce</title>
-		<link rel="stylesheet" type="text/css" href="http://localhost:8080/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css"/>
-	</head>
-	<body>
-		<div class="container">
-			<h1 class="text-center">Application Mcommerce</h1>
-			<div class="row">
-				<div class="col-md-4 mx-auto mt-5 text-center">
-					<p>
-						Ici l'utilisateur sélectionne en temps normal un moyen de paiement et entre les informations de sa carte bancaire.<br/>
-						Nous allons éviter d'ajouter les formulaires nécessaireS afin de garder l'application la plus basique et simple possible pour
-						la suite.<br/>
-						Si vous vous sentez à l'aise, vous pouvez créer un formulaire pour accepter le numéro de la CB, que vous traiterez dans le
-						contrôleur grâce à
-						un <i>PostMapping</i>.
-					</p>
-					<p>
-						<span>Quantite : </span><span th:text="${commande.quantite}" class="font-weight-bold"></span>
-					</p>
-					<p>
-						<span>Montant de la Commande (Taxes inclues) : </span><span th:text="${montantCommande}" class="font-weight-bold"></span>
-					</p>
-					<p>
-						<a th:href="@{|/suivi/${commande.id}/${montantCommande}|}" class="font-weight-bold">Suivre Ma Commande</a>
-					</p>
-					<p>
-						<a th:href="@{|/payer-commande/${commande.id}/${montantCommande}|}" class="font-weight-bold">Payer Ma Commande</a>
-					</p>
-				</div>
-			</div>
-		</div>
-		<script type="text/javascript" src="http://localhost:8080/webjars/bootstrap/4.0.0-2/js/bootstrap.min.js"></script>
-	</body>
+    <head>
+        <title>Mcommerce</title>
+        <link rel="stylesheet" type="text/css" href="http://localhost:8080/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css"/>
+    </head>
+    <body>
+        <div class="container">
+            <h1 class="text-center">Application Mcommerce</h1>
+            <div class="row">
+                <div class="col-md-4 mx-auto mt-5 text-center">
+                    <p>
+                        Ici l'utilisateur sélectionne en temps normal un moyen de paiement et entre les informations de sa carte bancaire.<br/>
+                        Nous allons éviter d'ajouter les formulaires nécessaireS afin de garder l'application la plus basique et simple possible pour
+                        la suite.<br/>
+                        Si vous vous sentez à l'aise, vous pouvez créer un formulaire pour accepter le numéro de la CB, que vous traiterez dans le
+                        contrôleur grâce à
+                        un <i>PostMapping</i>.
+                    </p>
+                    <p>
+                        <span>Quantite : <span th:text="${commande.quantite}" class="font-weight-bold"></span></span>
+                    </p>
+                    <p>
+                        <span>Montant de la Commande (Taxes inclues) : <span th:text="${montantCommande}" class="font-weight-bold"></span></span>
+                    </p>
+                    <p>
+                        <a th:href="@{|/payer-commande/${commande.id}/${montantCommande}|}" class="font-weight-bold">Payer Ma Commande</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript" src="http://localhost:8080/webjars/bootstrap/4.0.0-2/js/bootstrap.min.js"></script>
+    </body>
 </html>
